# documents-to-ai-readable-data

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_PUSH_CHECKLIST.md  GITHUB_PUSH_FIX.md  GITHUB_SETUP.md  INSTALL_AUDIVERIS.md  INSTALL_TESSERACT.md  LICENSE  LOC_COUNTER.md  PROJECT.md  QUICK_START.md  README.md  RESTART_GUIDE.md  SETUP_CHECKLIST.md  V6_TEST_RESULTS.md  V7_TEST_RESULTS.md  V8_TEST_RESULTS.md  pyproject.toml
INSTRUCTIONS/: PROJECT_CONTEXT.md  PROJECT_STATUS.md  STATUS.md  V10.1.md  V4_STATUS.md  V5_STATUS.md  V7.md  V8.md  V9.md  cursor_ohje_pdf_tyyppireititin_canvas_v_5_ocr_fallback_tuotantokelpoiseksi_tesseract_pakollinen_paddle_ocr_eristys.md
INSTRUCTIONS/Archive/: V1.md  V10.md  V2.md  V3.md  V4.md  V6.md
assistant-pack/: CHANGELOG.md  INIT_SESSION.md  PROJECT_CONTEXT_TEMPLATE.md  README.md  README_Carefully.md  RESET_PROMPT.md  SESSION_BOOTSTRAP_GLOBAL.md
checkers/: __init__.py  balance_sheet_checker.py  base.py  crossref_checker.py  diff_checker.py  ocr_quality_checker.py  schema_checker.py  semantic_section_checker.py  sum_checker.py
docs/: INIT_SESSION.md  PROJECT_CONTEXT.md  README.md  README_Carefully.md  RESET_PROMPT.md  SESSION_BOOTSTRAP_GLOBAL.md  dod.md  roadmap.md
src/: __init__.py
src/music/: __init__.py  detect.py  extract.py  omr.py  (+3 more)
tests/: test_loc_counter.py
tools/: check_beats.py  check_page2.py  check_rhythm.py  check_v7_detailed.py  check_v7_results.py  check_v8_adaptive_psm.py  check_v8_toc_targets.py  loc_counter.py  ocr_smoke_test.py  process_image.py  show_omr_result.py
workspace/: README.md
(+33 files in other folders)
